# media-kit

./: .gitignore
.fvm/versions/: 3.24.5
libs/android/media_kit_libs_android_video/: pubspec.yaml
libs/android/media_kit_libs_android_video/android/: .gitignore  build.gradle
libs/android/media_kit_libs_android_video/android/src/main/java/com/alexmercerind/media_kit_libs_android_video/: MediaKitLibsAndroidVideoPlugin.java
libs/android/media_kit_libs_android_video/android/src/main/java/com/alexmercerind/mediakitandroidhelper/: MediaKitAndroidHelper.java
libs/ios/media_kit_libs_ios_video/ios/: media_kit_libs_ios_video.podspec
libs/macos/media_kit_libs_macos_video/macos/: Makefile  media_kit_libs_macos_video.podspec
libs/windows/media_kit_libs_windows_video/: .gitignore  pubspec.yaml
libs/windows/media_kit_libs_windows_video/windows/: CMakeLists.txt
media_kit/: README.md  pubspec.yaml
media_kit/lib/: media_kit.dart
media_kit/lib/src/: legacy.dart  media_kit.dart
media_kit/lib/src/models/: player_state.dart  player_stream.dart
media_kit/lib/src/models/media/: media.dart  media_native.dart
media_kit/lib/src/player/: platform_player.dart  player.dart
media_kit/lib/src/player/native/core/: native_library.dart
media_kit/lib/src/player/native/player/: real.dart
media_kit/lib/src/player/native/utils/: android_helper.dart  temp_file.dart
media_kit_test/: pubspec.yaml
media_kit_test/lib/common/sources/: sources.dart
media_kit_test/macos/Flutter/: GeneratedPluginRegistrant.swift
media_kit_video/: pubspec.yaml
media_kit_video/android/: build.gradle
media_kit_video/common/darwin/: Makefile
media_kit_video/example/: .gitignore
media_kit_video/ios/: media_kit_video.podspec
media_kit_video/lib/media_kit_video_controls/: media_kit_video_controls.dart
media_kit_video/lib/media_kit_video_controls/src/controls/: cupertino.dart  material.dart  material_desktop.dart
media_kit_video/lib/media_kit_video_controls/src/controls/widgets/: video_state_inherited_widget.dart
media_kit_video/lib/src/utils/: wakelock.dart
media_kit_video/lib/src/video/: video.dart  video_texture.dart
media_kit_video/lib/src/video_controller/: video_controller.dart
media_kit_video/linux/: CMakeLists.txt
media_kit_video/linux/include/media_kit_video/: video_output.h
media_kit_video/macos/: media_kit_video.podspec
media_kit_video/windows/: CMakeLists.txt  angle_surface_manager.cc  angle_surface_manager.h  media_kit_video_plugin_c_api.cc  thread_pool.h  utils.cc
